added some model logic, and made commands for menu buttons

--- a/sortingAlgorithmsVizualizer/sortingAlgorithmsVizualizer_wpf/sortingAlgorithmsVizualizer_wpf.csproj
+++ b/sortingAlgorithmsVizualizer/sortingAlgorithmsVizualizer_wpf/sortingAlgorithmsVizualizer_wpf.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\sortingAlgorithmsVizualizer_classLib\sortingAlgorithmsVizualizer_classLib.csproj" />
+  </ItemGroup>
+
 </Project>
